Move effective-module-tree from dependencies to devDependencies

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@automattic/composite-checkout": "file:packages/composite-checkout",
 		"@automattic/composite-checkout-wpcom": "file:packages/composite-checkout-wpcom",
 		"@automattic/data-stores": "file:packages/data-stores",
+		"@automattic/effective-module-tree": "file:./packages/effective-module-tree",
 		"@automattic/format-currency": "file:packages/format-currency",
 		"@automattic/full-site-editing": "file:apps/full-site-editing",
 		"@automattic/load-script": "file:packages/load-script",
@@ -209,7 +210,6 @@
 		"concurrently": "5.1.0",
 		"cross-env": "6.0.3",
 		"duplicate-package-checker-webpack-plugin": "3.0.0",
-		"effective-module-tree": "file:./packages/effective-module-tree",
 		"enzyme": "3.11.0",
 		"enzyme-adapter-react-16": "1.15.1",
 		"enzyme-to-json": "3.4.3",
