--- a/packages/effective-module-tree/package.json
+++ b/packages/effective-module-tree/package.json
@@ -20,6 +20,7 @@
 	"dependencies": {
 		"debug": "^4.1.1",
 		"globby": "^11.0.0",
-		"object-treeify": "^1.1.23"
+		"object-treeify": "^1.1.23",
+		"yargs": "^15.1.0"
 	}
 }
